# worldCup

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  fetch_jingcai.py  fetch_live_odds.py  find_matches.py  groups_output.html  out.txt  out.utf8.txt  pyproject.toml  requirements.txt  sandbox_api_test.py  sandbox_jc.py  sandbox_selftest.py  test_predict.py
apps/api/worldcup_api/: main.py  runtime.py
apps/web/: index.html
apps/web/static/: app.js  styles.css
data/: schedule.json  teams.json
docs/: architecture-design.md  current-implementation.md  development-status.md  implementation-plan.md  kafka-event-bus.md
examples/: goal-event.json  shot-event.json
infra/: docker-compose.yml
infra/clickhouse/: init.sql
infra/postgres/: init.sql
models/: __init__.py  backtester.py  calibrator.py  elo_model.py  poisson_model.py  predictor.py  simulator.py  strategy.py
static/css/: style.css
static/js/: app.js
templates/: backtest.html  base.html  groups.html  index.html  match.html  review.html  strategy.html  tournament.html
tests/: test_external_adapters.py  test_kafka_event_bus.py  test_prediction_engine.py  test_runtime_flow.py  test_web_assets.py  test_worldcup_progress.py
utils/: api_fetcher.py  data_loader.py  live_provider.py  odds_provider.py  sporttery_fetcher.py
